# Kagami

./: .gitignore  .pre-commit-config.yaml  README.md  kagami.py  package.json  pnpm-lock.yaml  pyproject.toml
grpc/: supervisor.proto  worker.proto
grpc/supervisor/: supervisor.proto  supervisor_pb2.py  supervisor_pb2_grpc.py
grpc/worker/: worker.proto  worker_pb2.py  worker_pb2_grpc.py
kagami/: config.env  config.py  server.py
kagami/core/: __init__.py  supervisor.py
kagami/core/models/: __init__.py  provider_info.py  resource_info.py  worker_info.py
kagami/core/pytest/: conftest.py  mock_worker.py
kagami/database/: engine.py  session.py
kagami/database/admin/: admin.py
kagami/database/database_server/: engine.py
kagami/database/database_server/admin_sever/: session_admin.py
kagami/database/database_service/: __init__.py  admin.py  admin_manger.py  announce.py  engine.py  helper.py  worker.py  worker_manager.py
kagami/database/models/: admin.py  announce.py  helper.py  worker.py
kagami/extensions/: security_ext.py
kagami/grpc/: supervisor_pb2.py  supervisor_pb2.pyi  supervisor_pb2_grpc.py  update_grpc_python.sh  worker_pb2.py
kagami/routes/: __init__.py  deps.py  helper.py  resource.py  root.py
kagami/routes/admin/: resource.py  worker.py
kagami/webui/: .env.development  .env.production.example  CONTRIBUTING.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
kagami/webui/public/: index.html  manifest.json
kagami/webui/src/: App.tsx  global.scss  index.tsx  react-app-env.d.ts
kagami/webui/src/api/: admin.ts  (+10 more)
kagami_worker/: config.py  server.py
kagami_worker/core/: worker.py
kagami_worker/core/provider/: __init__.py  base.py  rsync.py
kagami_worker/grpc/: __init__.pyi  supervisor_pb2.py  supervisor_pb2.pyi  supervisor_pb2_grpc.py  update_grpc_python.sh  worker_pb2.pyi  worker_pb2_grpc.py
(+69 files in other folders)
