[tool.poetry]
name = "kagami"
version = "0.1.0"
description = "an opensource mirror system with management tools"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
SQLAlchemy = "^2.0.35"
grpcio = "^1.66.2"
grpcio-tools = "^1.67.0"
pydantic-settings = "^2.5.2"
starlette = "^0.41.2"
bcrypt = "^4.2.1"
uvicorn = "^0.32.1"
protoletariat = "^3.3.2"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
lint.select = ["F","E","W","UP","I"]
exclude = [
"grpc/*", "kagami/grpc/*", "kagami_worker/grpc/*"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["^grpc/*", "^kagami/grpc/*", "^kagami_worker/grpc/*"]
